--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "contributors": [
     {
+      "name": "Luke Rohenaz",
+      "url": "https://github.com/rohenaz/"
+    },
+    {
       "name": "MrZ",
       "url": "https://github.com/mrz1836/"
     }
