Try specific version

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,11 @@ phases:
       # Install yarn
       - apt update
       - apt install --no-install-recommends yarn
+      #- curl -fsSL https://deb.nodesource.com/setup_14.x | sudo -E bash
+      #- sudo apt-get install -y nodejs
 
       # Install firebase tools
-      - yarn global add firebase-tools
+      - yarn global add firebase-tools@10.9.2
 
   pre_build:
     commands:
