--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "standard-version": "^9.5.0"
   },
   "engines": {
-    "node": ">= 8"
+    "node": "<= 14.17.2"
   },
   "files": [
     "docs",
