--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -16,6 +15,9 @@ jobs:
 
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y build-essential autoconf automake libtool pkg-config
+
+    - name: Generate configure script
+      run: autoreconf -i
 
     - name: configure
       run: ./configure
